# dog-vision

./: .gitattributes  .gitignore  HOWTO.md  README.md  TRAINING.md  build_dataset.py  classify_video.py  dataset.npz  inferencer.py  live_webcam.py  mjpeg_server.py  orientation.py  overlay.py  pose_features.py  posture.py  posture_model_mlp.joblib  process_video.py  pyproject.toml  requirements.txt  retrain.sh  train_posture.py  webcam_record.py
dogvision/: __init__.py  inferencer.py  orientation.py  overlay.py  pose_features.py  posture.py
dogvision/tools/: __init__.py  build_dataset.py  classify_video.py  live_webcam.py  process_video.py  train_posture.py  webcam_record.py
models/: posture_model_mlp.joblib
